--- a/MailgunSender.csproj
+++ b/MailgunSender.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="RestSharp">
+      <HintPath>..\packages\RestSharp.105.1.0\lib\net45\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -44,12 +47,15 @@
     <Compile Include="Config\MailgunSmtpElement.cs" />
     <Compile Include="Factories\IMailFactory.cs" />
     <Compile Include="Factories\SmtpMailFactory.cs" />
-    <Compile Include="IMailSender.cs" />
-    <Compile Include="MailSender.cs" />
+    <Compile Include="MailSenders\HttpMailSender.cs" />
+    <Compile Include="MailSenders\IMailSender.cs" />
+    <Compile Include="MailSenders\SmtpMailSender.cs" />
     <Compile Include="Models\BaseMail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
